[package]
name = "my_websocket"
version = "0.1.0"
authors = ["TakahiroSato <futurenova52@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = "*"
serde_json = "1.0.41"
uuid = { version = "0.8", features = ["serde", "v4"] }
